[fix] adjust letter-spacing from px to rem

--- a/app/assets/stylesheets/redesign/layout/_nav-menu.scss
+++ b/app/assets/stylesheets/redesign/layout/_nav-menu.scss
@@ -149,7 +149,7 @@
   display: block;
 
   .nav li {
-    letter-spacing: 0.7px;
+    letter-spacing: 0.1rem;
 
     a .icon {
       opacity: 0;
