--- a/app/assets/stylesheets/redesign/product/_products_listing.scss
+++ b/app/assets/stylesheets/redesign/product/_products_listing.scss
@@ -9,7 +9,7 @@
 
   .name {
     text-transform: uppercase;
-    letter-spacing: 0.7px;
+    letter-spacing: 0.1rem;
     text-align: center;
     font-weight: bold;
     display: block;
